<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
      > 
      <TextView
        android:id="@+id/tvTop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/top_title"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/set_account_authentication"
        android:textColor="@color/white"
        android:textSize="20sp" />
      
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="horizontal"
    >
     <ImageView 
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_margin="5dp"
         android:src="@drawable/ok"/>
     <TextView 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:text="@string/set_upload_success"/>
</LinearLayout>
<TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="#9000"
    android:layout_marginTop="10dp"
    android:layout_gravity="center_horizontal"
    android:text="@string/set_upload_success_info"
    android:textSize="13sp"/>

  <Button
        android:id="@+id/authen_finish"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/corners_login_btn_bg"
        android:text="@string/uploadpic_finish"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>
