<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
      >

 <TextView
        android:id="@+id/tvTop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/top_title"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/feed_title_success"
        android:textColor="@color/white"
        android:textSize="20sp" />
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="horizontal"
    >
     <ImageView 
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_margin="5dp"
         android:src="@drawable/ok"/>
     <TextView 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:layout_marginLeft="5dp"
         android:text="@string/feed_success"/>
</LinearLayout>
 

  <Button
        android:id="@+id/btn_feedback_finish"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/corners_login_btn_bg"
        android:text="@string/feedback_commit_finish"
        android:textColor="@color/white"
        android:textSize="20sp" />
    

</LinearLayout>
