<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_gray" >


    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="160dp"
        android:layout_below="@id/top_title"
        android:layout_margin="10dp"
        android:background="@drawable/corners_bg"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/rl_top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_order_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:padding="10dp"
                android:text="@string/message_order_state"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_order_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="10dp"
                android:text="@string/message_order_time"
                android:textColor="@color/corner_strock"
                android:textSize="15sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/rl_top" >

            <LinearLayout
                android:id="@+id/ll_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:src="@drawable/add_account"
                    android:id="@+id/ivImg"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                     />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_order_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:text="@string/message_order_title"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_order_sail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:text="@string/message_order_sail"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_order_money"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:text="@string/message_order_money"
                    android:textColor="@color/corner_strock"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_order_phone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:text="@string/message_order_phone"
                    android:textColor="@color/corner_strock"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_order_number"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:text="@string/message_order_phone"
                    android:textColor="@color/corner_strock"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>