<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >

 <TextView
        android:id="@+id/tvTop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/top_title"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/set_account_writer_bank_top"
        android:textColor="@color/white"
        android:textSize="20sp" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/finish" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/set_account_add_bank_finish"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_add_bank_finish"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/corners_login_btn_bg"
        android:text="@string/common_btn_finish"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>