<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_gray"
    android:orientation="vertical" >

    <include layout="@layout/top_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/little_gray" />

        <LinearLayout
            android:id="@+id/rabate_userTel_layout"
            android:layout_width="fill_parent"
            android:layout_height="46dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_login_user_left"
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:src="@drawable/login_user_left" />

            <com.chehui.maiche.custom.EditTextWithDel
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@null"
                android:hint="@string/reg_user_name"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textSize="15sp"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="#4000" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:background="@color/little_gray" />

        <LinearLayout
            android:id="@+id/ll_pwd"
            android:layout_width="fill_parent"
            android:layout_height="46dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <com.chehui.maiche.custom.EditTextWithDel
                android:id="@+id/et_code"
                android:layout_width="160dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/reg_user_code"
                android:singleLine="true"
                 android:textSize="15sp"
                 android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="#4000" />

            <Button
                android:id="@+id/btn_send_code"
                android:layout_width="80dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@color/detail_modify_gray"
                android:text="@string/reg_user_send_code"
                android:textColor="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/little_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_user_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_agt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_user_agreement" />

        <TextView
            android:id="@+id/txt_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_user_agreement_txt"
            android:textColor="@android:color/holo_blue_light" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_next0"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/corners_login_btn_bg"
        android:text="@string/reg_next"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>