<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_gray"
    android:orientation="vertical" >

    <include
        android:id="@+id/top_title"
        layout="@layout/top_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:text="@string/feddback_hint"
            android:textColor="#7000"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/tv_feedback"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:background="@color/white"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:minLines="8"
            android:paddingLeft="5dp"
            android:scrollbars="vertical"
            android:paddingTop="5dp"
            android:textColor="#8000"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/feedback_btn_commit"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"
        android:background="@color/orange"
        android:text="@string/feddback_commit"
        android:textColor="@color/white"
        android:textSize="15sp" />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="12dp"
        android:orientation="vertical">
    
   <LinearLayout 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
        <TextView 
        android:id="@+id/feedback_call_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#7000"
        android:textSize="16sp"
        android:text="@string/call_us"/>
   
   <TextView 
        android:id="@+id/feedback_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:layout_marginLeft="5dp"
        android:clickable="true"
        android:autoLink="phone"
        android:textSize="16sp"
        android:text="@string/feedback_phone"/>
   
    </LinearLayout>
</LinearLayout>
</LinearLayout>