<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg" >

  <TextView
        android:id="@+id/tvTop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/top_title"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/reg_success"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/reg_complete"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="110dp"
        android:background="@null"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/finish" />
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:singleLine="true"
            android:text="@string/reg2_finish1"
            android:textColor="@color/black"
            android:textSize="22dp" />
        
         <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#9000"
        android:textSize="12sp"
        android:singleLine="true"
        android:layout_marginTop="5dp"
        android:text="通过实名认证，您才可以通过卖车通卖车哦"/>
         </LinearLayout>
    </LinearLayout>
   

    <Button
        android:id="@+id/reg_btn_startAuthentication"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_below="@id/reg_complete"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/corners_login_btn_bg"
        android:text="@string/reg_authentication"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/reg_btn_startapp"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_below="@id/reg_btn_startAuthentication"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:gravity="right"
        android:text="@string/reg2_finish2"
        android:textColor="@color/blue_modify"
        android:textSize="16sp" />

</RelativeLayout>